# stockpilot-ai

./: -w  .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  BUILD_COMPLETION_SUMMARY.md  DEPLOYMENT.md  DEVELOPER_CHECKLIST.md  Dockerfile  PROJECT_INDEX.md  QUICK_START.md  README.md  TODO.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  requirements.txt  tsconfig.json  turbo.json  vercel.json
.github/workflows/: ci-cd.yml  desktop-build.yml  mobile-build.yml  web-deploy.yml
alembic/: env.py
app/: main.py
app/agents/: __init__.py  base.py  controller.py  pricing_agent.py  profit_agent.py  registry.py  stock_agent.py  subscription_agent.py  sync_agent.py  tools.py
app/connectors/: __init__.py  amazon_connector.py  base_connector.py  mock_connector.py  noon_connector.py  shopify_connector.py  woocommerce_connector.py
app/core/: auth_dependency.py  celery_config.py  celery_worker.py  database.py  dependencies.py  security.py
app/ml/: forecast.py
app/models/: rma.py  (+34 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
e2e/: conftest.py  package.json  playwright.config.ts  pytest.ini  requirements.txt  test_ai_service.py  test_auth_service.py  test_billing_service.py  test_crm_service.py  test_cross_service.py  test_inventory_service.py  test_notification_service.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
gateway/: nginx.conf
scripts/: init-databases.sql
tests/: test_assistant.py  test_forecast.py  test_main.py  test_procurement_agent.py
(+222 files in other folders)
